# Programming-Language-Benchmarks

./: .gitattributes  .gitignore  ASRA Hameed  LICENSE  README.md  appveyor.yml
.github/: acton.sh  bun.sh  c.sh  clang.sh  codon.sh  cpp.sh  crystal.sh  dart.sh  deno.sh  dependabot.yml  dotnet.sh  fortran.sh  graalvm-native-image.sh  graalvm-node.sh  graalvm.sh  hashlink.sh  haxe.sh  hhvm.sh  lisp.sh  loom.sh  lua.sh  nelua.sh  nim.sh  odin.sh  python.sh  racket.sh  truffleruby.sh  v.sh  wasm.sh  zig.sh
.github/workflows/: bench.yml  bench_test.yml  cancel-stale.yml  codeql.yml  site.yml
bench/: .gitignore  bench.yaml  bench_acton.yaml  bench_c.yaml  bench_c_ffi.yaml  bench_c_zig.yaml  bench_chapel.yaml  bench_codon.yaml  bench_cpp.yaml  bench_cpp_zig.yaml  bench_crystal.yaml  bench_csharp.yaml  bench_csharp_mono.yaml  bench_csharp_native_aot.yaml  bench_csharp_preview.yaml  bench_d.yaml  bench_d_ldc.yaml  bench_dart.yaml  bench_dart_jit.yaml  bench_elixir.yaml  bench_fortran.yaml  bench_go.yaml  bench_go_ffi.yaml  bench_go_tinygo.yaml  bench_hack.yaml  bench_hare.yaml  bench_haskell.yaml  bench_haxe.yaml  bench_java.yaml  bench_java_graal.yaml  bench_java_loom.yaml  bench_javascript.yaml  bench_javascript_bun.yaml  bench_javascript_graalnode.yaml  bench_julia.yaml  bench_julia_aot.yaml  bench_kotlin.yaml  bench_kotlin_jvm.yaml  bench_kotlin_native.yaml  bench_lisp.yaml  (+39 more)
bench/algorithm/binarytrees/: 1.act  1.cl  1.cr  1.cs  1.d  1.dart  1.go  1.hack  1.hs  1.hx  1.js  1.kt  1.lua  1.ml  1.nim  1.odin  1.php  1.pl  1.pony  1.py  1.rb  1.rs  1.swift  1.ts  1.v  1.wren  1.zig  1s.ml  2-m.cl  2-m.go  2.c  2.cl  2.cs  2.go  2.hx  2.java  2.nim  2.rs  2.zig  3-m.cl  (+22 more)
bench/algorithm/coro-prime-sieve/: 1.chpl  1.cr  1.cs  1.d  1.dart  1.ex  1.go  1.hack  1.java  1.js  1.kt  1.lua  1.ml  1.nim  1.py  1.rb  1.rs  1.ts  1.v  1.wren  1.zig  1000_out  100_out  2-m.kt  2.cs  2.d  2.dart  2.go  2.java  2.nim  2.py  2.rb  2.rs  200_out  3-m.rs  3.dart  3.kt  3.nim  3.rs  4.rs  (+1 more)
bench/algorithm/edigits/: 1.act  1.chpl  1.cr  1.cs  1.d  1.dart  1.ex  1.go  1.java  1.js  1.nim  1.py  1.rs  1.v  1.zig  1000_out  2.rs  227_out
bench/algorithm/fannkuch-redux/: 1-i.d  1-im.d  1-m.cl  1-m.cpp  1-m.rs  1.cl  1.cpp  1.cr  1.d  1.go  1.java  1.rs  1.swift  1.v  1.zig  2-i.d  2-i.rs  2-im.d  2-im.rs  2-m.zig  2.d  2.dart  2.jl  2.ml  2.rs  2.zig  3-i.rs  3-i.zig  3-im.rs  3.go  5-m.rs  5.rs  9.cs
bench/algorithm/fasta/: 1.cl  1.cr  1.d  1.dart  1.hx  1.nim  1.pl  1.py  1.rs  1.ts  1.v  1.zig  1c.rs  2.cl  2.cr  2.nim  3.go  3.rkt  3.swift  4.f90  4.java  5-m.py  5.chpl  5.cs  5.py  5.rs  5c-m.rs  5c.rs  6.ml  6.rb  6.rs  7.jl
bench/algorithm/helloworld/: 1.act  1.c  1.chpl  1.cl  1.cpp  1.cr  1.cs  1.d  1.dart  1.ex  1.f90  1.go  1.ha  1.hack  1.hs  1.hx  1.java  1.jl  1.js  1.kt  1.lisp  1.lua  1.ml  1.nelua  1.nim  1.odin  1.php  1.pl  1.pony  1.py  1.rb  1.rkt  1.rs  1.swift  1.ts  1.v  1.wren  1.zig  QwQ_out  T_T_out
bench/algorithm/http-server/: 1-http2.go  1-http2.rs  1-http2.ts  1.bun.js  1.cr  1.cs  1.d  1.dart  1.go  1.js  1.kt  1.nim  1.py  1.rb  1.rs  1.swift  1.ts  1.v  2-http2.cs  2-http2.rs  2-http3.cs  2-tls.ts  2.cs  2.d  2.dart  2.go  2.kt  2.nim  2.py  2.rs  2.ts  3.go  500_out
bench/algorithm/json-serde/: 1.cr  1.cs  1.d  1.dart  1.go  1.hx  1.js  1.kt  1.ml  1.nim  1.py  1.rb  1.rs  1.ts  1.v  1.zig  2-ffi.go  2-streaming.zig  2.cs  2.d  2.go  2.rs  3-streaming.go  3.rs  4-ffi-streaming.go  4-i.rs  4-streaming.rs  4.rs  5-i.rs  canada_3_out  sample.json  sample_10_out
bench/algorithm/knucleotide/: .gitattributes  1-m.d  1-m.zig  1.c  1.odin  1.rb  1.zig  2.swift  3.chpl  3.dart  3.java  3.ml  3.py  6.cs  7.go  8-m.rs  8.jl
bench/algorithm/lru/: 0-unsafe.cr  0-unsafe.rs  1.cr  1.cs  1.d  1.dart  1.go  1.hx  1.js  1.kt  1.ml  1.nim  1.odin  1.pony  1.py  1.rb  1.rs  1.ts  1.v  1.zig  10000_out  100_10000_out  10_1000_out  2.chpl  2.cs  2.dart  2.go  2.js  2.kt  2.nim  2.py  2.rs  2.ts  2.v  3.go  77_7777_out
bench/algorithm/mandelbrot/: 1-ffi.c  1-m.cl  1-mffi.c  1.cl  1.cr  1.cs  1.d  1.go  1.java  1.ml  1.nim  1.odin  1.v  1.zig  1_out  1a.java  1b.java  2.cl  2.cr  2.cs  2.dart  2.java  200_out  3.cs  4-m.java  4.cs  4.java  4.rkt  500_out  6.ml  8.jl  8.rs  9-m.cs  9-m.rs  9.cs  9.rs
bench/algorithm/merkletrees/: 1-m.cl  1.act  1.chpl  1.cl  1.cr  1.cs  1.d  1.dart  1.go  1.hack  1.hx  1.java  1.js  1.kt  1.lua  1.ml  1.nim  1.php  1.py  1.rb  1.rs  1.ts  1.zig  10_out  2-m.cl  2.cs  2.go  2.ml  9_out
bench/algorithm/nbody/: 0.cpp  1-i.odin  1.cl  1.cpp  1.cr  1.d  1.go  1.hx  1.java  1.kt  1.ml  1.odin  1.pony  1.py  1.rs  1.v  1.wren  1.zig  1n.kt  2.c  2.chpl  2.cl  2.cr  2.cs  2.d  2.f90  2.hx  2.java  2.lisp  2.nim  2.pl  2.py  2.rb  2.rkt  2.rs  2.zig  3.cl  3.dart  3.hx  3.rs  (+15 more)
bench/algorithm/nsieve/: 1.act  1.c  1.cl  1.cpp  1.cr  1.cs  1.d  1.go  1.java  1.jl  1.js  1.ml  1.nim  1.odin  1.py  1.rs  1.v  1.zig  2.c  2.cl  2.cpp  2.cr  2.cs  2.d  2.go  2.java  2.ml  2.nim  2.odin  2.py  2.rs  2.v  2.zig  3.cl  3.cpp  4.cl  4_out  5.cl  (+2 more)
bench/include/: .gitignore
bench/include/ocaml/: .gitignore  app.opam  dune
bench/include/rust/: .gitignore  Cargo.toml  rust-toolchain.toml  wrapper.js  wrapper.ts
bench/include/rust-nightly/: .gitignore  Cargo.toml
bench/include/rust-nightly/.cargo/: config.toml
bench/include/rust-wasm/: .gitignore  Cargo.toml  rust-toolchain.toml
bench/include/rust/.cargo/: config.toml
bench/tool/: .gitignore  AppveyorUtils.cs  BenchTool.csproj  BenchTool.sln  BuildOutputJson.cs  CpuInfo.cs  GithubActionUtils.cs  NLogUtils.cs  NumberExtensions.cs  ProcessUtils.cs  Program.cs  StringExtensions.cs  TempFolder.cs  YamlLangConfig.cs  nlog.config
website/: .eslintrc.js  .gitignore  .vercelignore  README.md  contentUtils.ts  custom.d.ts  gtmUtils.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  stylelint.config.js  tsconfig.json
website/.vercel/: project.json
website/components/: CompilerPage.vue  LangMetaPage.vue  MenuButton.vue
website/layouts/: default.vue
website/pages/: index.vue
website/static/: robots.txt
(+1967 files in other folders)
