opam-version: "2.0"
name: "app"
version: "0.1.0"
synopsis: "Opam package"
description: "Opam package"
maintainer: ["hanabi1224"]
license: ["MIT"]
build: [
   [ "dune" "build" ]
]
depends: [
  # "dune" {build}
  # "re" {>= "1.10.3"}
  "res" {>= "5.0.1"}
  "yojson" {>= "2.0.0"}
  # "opam-lock" {dev}
  # "ocaml" {>= "4.11.1"}
  # "zarith" {>= "1.12"}
  # "gmp" {>= "6.2.1"}
]
