[package]
edition = "2021"
name = "_app"
version = "0.1.0"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
generic-array = "0"
lazy_static = "1"
md5 = "0"
num-traits = "0"
num_cpus = "1"
numeric-array = "0"
rayon = "1"

# core_simd = {git = "https://github.com/rust-lang/portable-simd"}
# std_float = {git = "https://github.com/rust-lang/portable-simd"}

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
overflow-checks = false
strip = true
